change password, ConfirmEmail.html visual change,

--- a/Services/Email/Templates/ConfirmEmail.html
+++ b/Services/Email/Templates/ConfirmEmail.html
@@ -3,8 +3,12 @@
     Congratulations on your successful registration on the {{SiteName}} website!
 </p>
 <p>
-    To confirm your email <u>{{Email}}</u>, please follow this link: <br />
+    <br />
+    To confirm your email <u>{{Email}}</u>, please follow this link:
+    <br />
+    <br />
     <a href="{{ConfirmLink}}">{{ConfirmLink}}</a>
+    <br />
 </p>
 <p>
     Best regards, the {{SiteName}} team
