--- a/Views/Forum/DisplayTemplates/ForumPost.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumPost.cshtml
@@ -16,7 +16,21 @@
 				<div>@Model.AuthorRole</div>
 			</div>
 			<div class="col-10">
-				<small class="text-muted">Published @Model.CreationDateString</small>
+				<div class="d-flex justify-content-between">
+					<small class="text-muted">Published @Model.CreationDateString</small>
+					<div>
+						<div class="d-inline-block mx-1" rating-item-id="@Model.Id" rating-value="1">
+							<i class="rate-icon @(Model.UserRating > 0 ? "fas" : "far") fa-thumbs-up"></i>
+							<span class="rate-count">@Model.Likes</span>
+						</div>
+						<div class="d-inline-block" rating-item-id="@Model.Id" rating-value="-1">
+							<i class="rate-icon @(Model.UserRating < 0 ? "fas" : "far") fa-thumbs-down"></i>
+							<span class="rate-count">@Model.Dislikes</span>
+						</div>
+						
+					</div>
+				</div>
+				
 				<p class="mt-3">@Model.Content</p>
 			</div>
 		</div>
