--- a/Views/Forum/DisplayTemplates/ForumTheme.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumTheme.cshtml
@@ -4,7 +4,7 @@
 *@
 @{
 }
-<div class="card mb-3" style="background-color: #303030;">
+<div class="card mb-3 color-bg-dark">
 	<div class="card-body">
 		<a asp-action="Theme" asp-route-id="@Model.Id">
 			<h4>@Model.Title</h4>
