--- a/Views/Forum/DisplayTemplates/ForumPost.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumPost.cshtml
@@ -15,23 +15,44 @@
 					 style="aspect-ratio: 1/1; width: 100%; border-radius: 100%">
 				<div>@Model.AuthorRole</div>
 			</div>
-			<div class="col-10">
-				<div class="d-flex justify-content-between">
-					<small class="text-muted">Published @Model.CreationDateString</small>
-					<div>
-						<div class="d-inline-block mx-1" rating-item-id="@Model.Id" rating-value="1">
-							<i class="rate-icon @(Model.UserRating > 0 ? "fas" : "far") fa-thumbs-up"></i>
-							<span class="rate-count">@Model.Likes</span>
+			<div class="col-10 d-flex flex-column justify-content-between">
+				<div>
+					<div class="d-flex justify-content-between">
+						<small class="text-muted">Published @Model.CreationDateString</small>
+						<div>
+							<div class="d-inline-block mx-1" rating-item-id="@Model.Id" rating-value="1">
+								<i class="rate-icon @(Model.UserRating > 0 ? "fas" : "far") fa-thumbs-up"></i>
+								<span class="rate-count">@Model.Likes</span>
+							</div>
+							<div class="d-inline-block" rating-item-id="@Model.Id" rating-value="-1">
+								<i class="rate-icon @(Model.UserRating < 0 ? "fas" : "far") fa-thumbs-down"></i>
+								<span class="rate-count">@Model.Dislikes</span>
+							</div>
+
 						</div>
-						<div class="d-inline-block" rating-item-id="@Model.Id" rating-value="-1">
-							<i class="rate-icon @(Model.UserRating < 0 ? "fas" : "far") fa-thumbs-down"></i>
-							<span class="rate-count">@Model.Dislikes</span>
-						</div>
-						
 					</div>
+
+					@if(Model.Reply is not null)
+					{
+						<div class="card my-3 color-bg-dark">
+							<div class="card-body">
+								<div>
+									<i class="fas fa-quote-left"></i>
+									<a class="mx-1" asp-controller="Account" asp-action="Profile" asp-route-id="@Model.Reply.AuthorId">@Model.Reply.AuthorName</a>
+									<span>wrote:</span>
+									<p>
+										@Model.Reply.Content
+									</p>
+								</div>
+							</div>
+						</div>
+					}
+					<p class="mt-3 post-content">@Model.Content</p>
 				</div>
 				
-				<p class="mt-3">@Model.Content</p>
+
+				<button type="button" class="btn btn-link mt-auto fw-bold align-self-end" 
+						data-mdb-ripple-color="light" reply-post-id="@Model.Id">Reply</button>
 			</div>
 		</div>
 	</div>
