--- a/Views/Account/Manage.cshtml
+++ b/Views/Account/Manage.cshtml
@@ -47,7 +47,7 @@
 					<div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 8px;"></div><div class="form-notch-trailing"></div></div>
 				</div>
 
-				<button class="btn btn-primary btn-block mb-3" id="changePasswordBtn" type="button">
+				<button class="btn btn-secondary btn-block mb-3" id="changePasswordBtn" type="button">
 					Change password
 				</button>
 
@@ -72,7 +72,7 @@
 					<div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 8px;"></div><div class="form-notch-trailing"></div></div>
 				</div>
 
-				<button class="btn btn-primary btn-block mb-3" id="changeEmalBtn" type="button">
+				<button class="btn btn-secondary btn-block mb-3" id="changeEmalBtn" type="button">
 					Change email
 				</button>
 
@@ -93,9 +93,8 @@
 					<img id="avatarPreview" class="w-100" style="aspect-ratio: 1/1; border-radius: 100%">
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
 					<form id="uploadAvatarForm" method="post" enctype="multipart/form-data">
-						<button asp-action="UploadAvatar" type="submit" class="btn btn-primary">Upload</button>
+						<button asp-action="UploadAvatar" type="submit" class="btn btn-secondary">Upload</button>
 					</form>
 					
 				</div>
