--- a/Views/Forum/Index.cshtml
+++ b/Views/Forum/Index.cshtml
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="submit" asp-action="CreateTheme" class="btn btn-primary">Add</button>
+					<button type="submit" asp-action="CreateTheme" class="btn btn-secondary">Add</button>
 				</div>
 			</form>
 		</div>
@@ -55,7 +55,7 @@
 			<form method="post" enctype="multipart/form-data" method="post">
 				<div class="d-flex gap-3">
 					<input class="form-control d-inline flex-fill" style="width: auto" required name="title">
-					<button type="submit" asp-action="CreateSection" class="btn btn-primary">Add</button>
+					<button type="submit" asp-action="CreateSection" class="btn btn-secondary">Add</button>
 				</div>
 				<div class="validation" asp-validation-summary="All" />
 			</form>
