--- a/Views/Forum/Topic.cshtml
+++ b/Views/Forum/Topic.cshtml
@@ -50,7 +50,7 @@
 				<input id="topicId" name="topicid" value="@Model.Id" hidden />
 				<input id="replyId" name="replyid" hidden />
 				<textarea id="replyContent" class="md-textarea form-control mb-3" name="content" rows="3"></textarea>
-				<button type="submit" asp-action="CreatePost" class="btn btn-primary">Post</button>
+				<button type="submit" asp-action="CreatePost" class="btn btn-secondary">Post</button>
 			</form>
 		</div>
 	</div>
