change reply button visility for guests

--- a/Views/Forum/DisplayTemplates/ForumPost.cshtml
+++ b/Views/Forum/DisplayTemplates/ForumPost.cshtml
@@ -53,8 +53,10 @@
 
 				@if(User.Identity is not null && User.Identity.IsAuthenticated && !User.IsInRole("NotConfirmed"))
 				{
-				<button type="button" class="btn btn-link mt-auto fw-bold align-self-end" 
-						data-mdb-ripple-color="light" reply-post-id="@Model.Id">Reply</button>	
+					<button type="button" class="btn btn-link mt-auto fw-bold align-self-end"
+							data-mdb-ripple-color="light" reply-post-id="@Model.Id">
+						Reply
+					</button>
 				}
 				
 			</div>
